# webonomicon

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  glossary.md  pyproject.toml
01_intro/: index.md  slides.md
02_htmlcss/: demo.html  index.md
02_http/: index.md
03_js/: index.md
03_server/: index.md
04_browser/: index.md
04_db/: index.md
05_http/: index.md
05_test/: index.md
06_server/: index.md
06_view/: index.md
07_db/: index.md
07_forms/: index.md
08_browser/: index.md
08_js/: index.md
08_test/: index.md
09_htmx/: index.md
10_forms/: index.md
10_htmx/: index.md
10_migrate/: index.md
11_htmx/: index.md
11_perm/: index.md
12_auth/: index.md
13_auth/: index.md
13_crypt/: index.md
14_automate/: index.md
14_test/: index.md
15_crypt/: index.md
15_graphics/: index.md
16_gui/: index.md
16_upload/: Makefile  index.md
17_log/: Makefile  index.md
18_intl/: index.md
18_perm/: index.md
19_access/: index.md
19_log/: index.md
20_sessions/: index.md
21_graphics/: index.md
21_intl/: index.md
21_sessions/: Makefile  index.md
22_fasthtml/: Makefile  index.md  server.py  views.py
23_log/: index.md
24_cache/: index.md
96_htmlcss/: escape_characters.tbl  html_tags.tbl  index.md
97_js/: index.md
97_workflow/: index.md
98_fasthtml/: index.md  server.py  views.py
98_htmlcss/: index.md
98_js/: index.md
98_workflow/: index.md
99_cert/: index.md
docs/: bibliography.html  contributing.html  glossary.html  index.html  license.html
static/: page.css
templates/: page.html  slides.html
(+90 files in other folders)
