[project]
name = "webonomicon"
version = "0.1.28"
dependencies = [
    "beautifulsoup4",
    "esprima",
    "faker",
    "flask",
    "flask-cors",
    "html5validator",
    "jinja2",
    "httpx",
    "markdown",
    "mccole",
    "polars",
    "prettytable",
    "pyjwt",
    "pypika",
    "pytest",
    "python-multipart",
    "ruff",
    "selenium",
    "snailz"
]

[tool.ruff.lint.extend-per-file-ignores]
"**/test_*.py" = ["F401", "F811"] # ignore complaints about unused imports for fixtures

[tool.mccole]
skips = ["templates"]

[tool.mccole.renames]
"CODE_OF_CONDUCT.md" = "code_of_conduct.md"
"CONTRIBUTING.md" = "contributing.md"
"LICENSE.md" = "license.md"
"README.md" = "index.md"
