[project]
name = "webonomicon"
version = "0.1.29"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "flask",
    "flask-cors",
    "html5validator",
    "httpx",
    "jinja2",
    "loguru",
    "markdown",
    "mccole",
    "polars",
    "prettytable",
    "pyjwt",
    "pypika",
    "pytest",
    "python-fasthtml",
    "python-multipart",
    "ruff",
    "selenium",
    "snailz",
    "structlog"
]

[tool.ruff.lint.extend-per-file-ignores]
"**/test_*.py" = ["F401", "F811"] # ignore complaints about unused imports for fixtures

[tool.mccole]
skips = ["CLAUDE.md", "templates", "unused"]

[tool.mccole.renames]
"CODE_OF_CONDUCT.md" = "code_of_conduct.md"
"CONTRIBUTING.md" = "contributing.md"
"LICENSE.md" = "license.md"
"README.md" = "index.md"
